[package]
name = "assrs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "assrs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/http.rs"
name = "ass-sim-server"

[dependencies]
serde_json = "1"
serde = {version="1", features=["derive"]}
mlua = { version = "0.8.3", features = ["lua51"] }
actix-web = '4'
oneshot = "*"