[package]
name = "assrs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "assrs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = {version="1", features=["derive"]}
mlua = { version = "0.8.3", features = ["lua53"] }
actix-web = '4'
oneshot = "*"
futures = "*"
env_logger = "*"
enum-utils = "0.1.2"
itertools = "*"